# mafaulda-plus

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: filters.py
mafaulda/: __init__.py  dataset.py  dataset_frameworks.py  downloader.py  featureset_frameworks.py  fewshot_sampler.py  filtering.py  ingestion.py  transform.py  utilities.py
