[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mafaulda-plus"
version = "0.1.0"
description = "An enterprise-grade, concurrent, and zero-copy ingestion, filtering, and windowing pipeline for the MAFAULDA machinery fault diagnosis dataset."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ali Razani" }
]

# 🚀 کلمات کلیدی غنی شده برای هدایت دقیق‌تر کاربران و بهبود سئو پکیج
keywords = [
    "mafaulda", 
    "bearing-fault-diagnosis", 
    "machinery-fault-dataset", 
    "vibration-signals",
    "few-shot-learning", 
    "meta-learning",
    "zero-copy-windowing", 
    "zarr-v3", 
    "signal-filtering",
    "condition-monitoring"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.3",
    "requests>=2.32.4",
    "zarr>=3.2.1",
    "pandas>=2.2.2",
]

[tool.setuptools]
packages = ["mafaulda"]

[tool.setuptools.package-data]
"mafaulda" = ["*.py"]

[project.urls]
Homepage = "https://github.com/Razani-Ali/mafaulda-plus"
"Bug Tracker" = "https://github.com/Razani-Ali/mafaulda-plus/issues"